--- a/_posts/2018-12-22-AES.md
+++ b/_posts/2018-12-22-AES.md
@@ -1,9 +1,9 @@
 ---
 layout:     post
 
-title:      Feistel Structure
+title:      AES
 
-date:       2018-12-19
+date:       2018-12-18
 
 author:     Augustine Tong
 
@@ -15,5 +15,5 @@ tags:
     - Crptography
 ---
 
-# Feistel Structure
-Feistel Structure
+# AES
+AES
