--- a/_posts/2018-12-26-CPA.md
+++ b/_posts/2018-12-26-CPA.md
@@ -1,9 +1,9 @@
 ---
 layout:     post
 
-title:      Salsa
+title:      CPA
 
-date:       2018-12-24
+date:       2018-12-26
 
 author:     Augustine Tong
 
@@ -15,5 +15,5 @@ tags:
     - Crptography
 ---
 
-# Salsa
-Salsa
+# CPA
+CPA
