--- a/_posts/2019-01-21-CPA.md
+++ b/_posts/2019-01-21-CPA.md
@@ -1,9 +1,9 @@
 ---
 layout:     post
 
-title:      HMAC
+title:      CPA
 
-date:       2018-12-30
+date:       2019-01-21
 
 author:     Augustine Tong
 
@@ -15,5 +15,5 @@ tags:
     - Crptography
 ---
 
-# Hash MAC
-Hash MAC
+# CPA
+CPA
