--- a/_posts/2018-12-16-OTP.md
+++ b/_posts/2018-12-16-OTP.md
@@ -17,6 +17,6 @@ tags:
 
 # One Time Pad
 
-![One Time Pad](img/crptography/OPT_Concept.png)
+![One Time Pad](img/crpto/OPT_Concept.png)
 
-![One Time Pad](img/cryptography/OPT_P0.png)
+![One Time Pad](img/crypto/OPT_P0.png)
