--- a/_posts/2018-12-16-OTP.md
+++ b/_posts/2018-12-16-OTP.md
@@ -19,4 +19,9 @@ tags:
 
 ![One Time Pad](/img/crpto/OTP_Concept.png)
 
-![One Time Pad](/img/crpto/OTP_P0.png)
+![OTP_P0](/img/crpto/OTP_P0.png)
+
+![OTP_Pefect_Security](/img/crpto/OTP_Pefect_Security.png)
+
+![ ](/img/crpto/.png)
+
