--- a/_posts/2018-12-17-PRG.md
+++ b/_posts/2018-12-17-PRG.md
@@ -22,9 +22,9 @@ tags:
 
 ![PRG_P0](/img/crpto/PRG_P0.png)
 
-![ ](/img/crpto/.png)
+![PRG_P1](/img/crpto/PRG_P1.png)
 
-![ ](/img/crpto/.png)
+![PRG_Attack1](/img/crpto/PRG_Attack1.png)
 
 ![ ](/img/crpto/.png)
 
