--- a/_posts/2018-12-17-PRG.md
+++ b/_posts/2018-12-17-PRG.md
@@ -26,6 +26,6 @@ tags:
 
 ![PRG_Attack1](/img/crpto/PRG_Attack1.png)
 
-![ ](/img/crpto/.png)
+![PRG_Attack2](/img/crpto/PRG_Attack2.png)
 
 ![ ](/img/crpto/.png)
