--- a/_posts/2018-12-17-PRG.md
+++ b/_posts/2018-12-17-PRG.md
@@ -27,3 +27,7 @@ tags:
 ![PRG_Attack1](/img/crpto/PRG_Attack1.png)
 
 ![PRG_Attack2](/img/crpto/PRG_Attack2.png)
+
+![PRG_Advantage](/img/crpto/PRG_Advantage.png)
+
+![PRG_P2](/img/crpto/PRG_P2.png)
