--- a/_posts/2018-12-16-OTP.md
+++ b/_posts/2018-12-16-OTP.md
@@ -17,11 +17,15 @@ tags:
 
 # One Time Pad
 
+## OTP_Concept
 ![One Time Pad](/img/crpto/OTP_Concept.png)
 
+## OTP_P0
 ![OTP_P0](/img/crpto/OTP_P0.png)
 
+## OTP_Pefect_Security
 ![OTP_Pefect_Security](/img/crpto/OTP_Pefect_Security.png)
 
+## OTP_P1
 ![OTP_P1](/img/crpto/OTP_P1.png)
 
