--- a/_posts/2018-12-17-PRG.md
+++ b/_posts/2018-12-17-PRG.md
@@ -17,21 +17,28 @@ tags:
 
 # PRG
 
-
+## Stream Cipher
 ![Stream Cipher](/img/crpto/Stream Cipher.png)
 
+## PRG_P0
 ![PRG_P0](/img/crpto/PRG_P0.png)
 
+## PRG_P1
 ![PRG_P1](/img/crpto/PRG_P1.png)
 
+## PRG_Attack1
 ![PRG_Attack1](/img/crpto/PRG_Attack1.png)
 
+## PRG_Attack2
 ![PRG_Attack2](/img/crpto/PRG_Attack2.png)
 
+## PRG_Advantage
 ![PRG_Advantage](/img/crpto/PRG_Advantage.png)
 
+## PRG_P2
 ![PRG_P2](/img/crpto/PRG_P2.png)
 
+## PRG_P3
 ![PRG_P3](/img/crpto/PRG_P3.png)
 
 
