--- a/_posts/2018-12-18-PRF.md
+++ b/_posts/2018-12-18-PRF.md
@@ -16,4 +16,15 @@ tags:
 ---
 
 # PRF
-PRF
+
+## PRF_PRP
+![PRF_PRP](/img/crpto/PRF_PRP.png)
+
+## PRF_Secure
+![PRF_Secure](/img/crpto/PRF_Secure.png)
+
+## PRF_P0
+![PRF_P0](/img/crpto/PRF_P0.png)
+
+## PRF_PRG
+![PRF_PRG](/img/crpto/PRF_PRG.png)
