--- a/_posts/2018-12-20-SPN.md
+++ b/_posts/2018-12-20-SPN.md
@@ -16,4 +16,11 @@ tags:
 ---
 
 # SPN structure
-SPN structure
+
+
+## Subs_Perm_Network
+![Subs_Perm_Network](/img/crpto/Subs_Perm_Network.png)
+
+##
+![ ](/img/crpto/.png)
+
