--- a/_posts/2018-12-18-PRF.md
+++ b/_posts/2018-12-18-PRF.md
@@ -28,3 +28,20 @@ tags:
 
 ## PRF_PRG
 ![PRF_PRG](/img/crpto/PRF_PRG.png)
+
+## Build_PRF_from_PRG
+![Build_PRF_from_PRG](/img/crpto/Build_PRF_from_PRG.png)
+
+## PRF_Extending_PRG
+![PRF_Extending_PRG](/img/crpto/PRF_Extending_PRG.png)
+
+
+## PRF_GGM
+![PRF_GGM](/img/crpto/PRF_GGM.png)
+
+
+## PRF_P1
+![PRF_P1](/img/crpto/PRF_P1.png)
+
+
+
