--- a/_posts/2018-12-26-CPA.md
+++ b/_posts/2018-12-26-CPA.md
@@ -33,6 +33,6 @@ tags:
 ## CPA_Problem1_RandomizedEncryption
 ![CPA_Problem1_RandomizedEncryption](/img/crpto/CPA_Problem1_RandomizedEncryption.png)
 
-## 
-![ ](/img/crpto/.png)
+## CPA_Solution2_nonceBasedEncryption
+![CPA_Solution2_nonceBasedEncryption](/img/crpto/CPA_Solution2_nonceBasedEncryption.png)
 
