--- a/_posts/2018-12-26-CPA.md
+++ b/_posts/2018-12-26-CPA.md
@@ -36,3 +36,17 @@ tags:
 ## CPA_Solution2_nonceBasedEncryption
 ![CPA_Solution2_nonceBasedEncryption](/img/crpto/CPA_Solution2_nonceBasedEncryption.png)
 
+
+## CPA_Solution2_nonceBasedEncryption2
+![CPA_Solution2_nonceBasedEncryption2](/img/crpto/CPA_Solution2_nonceBasedEncryption2.png)
+
+## 
+![ ](/img/crpto/.png)
+
+
+## 
+![ ](/img/crpto/.png)
+
+##
+![ ](/img/crpto/.png)
+
