--- a/_posts/2018-12-26-CPA.md
+++ b/_posts/2018-12-26-CPA.md
@@ -36,17 +36,20 @@ tags:
 ## CPA_Solution2_nonceBasedEncryption
 ![CPA_Solution2_nonceBasedEncryption](/img/crpto/CPA_Solution2_nonceBasedEncryption.png)
 
-
 ## CPA_Solution2_nonceBasedEncryption2
 ![CPA_Solution2_nonceBasedEncryption2](/img/crpto/CPA_Solution2_nonceBasedEncryption2.png)
 
-## 
-![ ](/img/crpto/.png)
+## CPA_Problem2.png
+![CPA_Problem2.png](/img/crpto/CPA_Problem2.png.png)
 
+## CBC
+![CBC](/img/crpto/CBC.png)
 
-## 
-![ ](/img/crpto/.png)
+## CBC_Decryption
+![CBC_Decryption](/img/crpto/CBC_Decryption.png)
 
-##
-![ ](/img/crpto/.png)
+## CBC_CPA
+![CBC_CPA](/img/crpto/CBC_CPA.png)
 
+## CBC_RandomIV
+![CBC_RandomIV](/img/crpto/CBC_RandomIV.png)
