--- a/_posts/2018-12-30-HMAC.md
+++ b/_posts/2018-12-30-HMAC.md
@@ -18,9 +18,14 @@ tags:
 # Hash MAC
 
 
-## 
-![ ](/img/crpto/.png)
+## Collision_Resistance
+![Collision_Resistance](/img/crpto/Collision_Resistance.png)
 
-##
-![ ](/img/crpto/.png)
+## CR_Hash
+![CR_Hash](/img/crpto/CR_Hash.png)
 
+## HMAC_Problem1
+![HMAC_Problem1](/img/crpto/HMAC_Problem1.png)
+
+## HMAC_Problem2
+![HMAC_Problem2](/img/crpto/HMAC_Problem2.png)  
