--- a/_posts/2018-12-29-CBC-MAC.md
+++ b/_posts/2018-12-29-CBC-MAC.md
@@ -21,6 +21,24 @@ tags:
 ## CBC
 ![CBC](/img/crpto/CBC.png)
 
-##
-![ ](/img/crpto/.png)
+## CBC_MAC
+![CBC_MAC](/img/crpto/CBC_MAC.png)
+
+## Nested_MAC
+![Nested_MAC](/img/crpto/Nested_MAC.png)
+
+## CBC_MAC_Problem1
+![CBC_MAC_Problem1](/img/crpto/CBC_MAC_Problem1.png)
+
+## Comparison
+![Comparison](/img/crpto/Comparison.png)
+
+## CBC_MAC_Padding
+![CBC_MAC_Padding](/img/crpto/CBC_MAC_Padding.png)
+
+## PMAC_Problem1
+![PMAC_Problem1](/img/crpto/PMAC_Problem1.png)
+
+## MAC_One_Time_Mac
+![MAC_One_Time_Mac](/img/crpto/MAC_One_Time_Mac.png)
 
