--- a/_posts/2019-01-13-ECDLP.md
+++ b/_posts/2019-01-13-ECDLP.md
@@ -18,9 +18,9 @@ tags:
 # ECDLP
 
 
-## 
-![ ](/img/crpto/.png)
+## ECDLP
+![ECDLP](/img/crpto/ECDLP.png)
 
-##
-![ ](/img/crpto/.png)
+## ECDiffie_Hellman_Key_Exchange
+![ECDiffie_Hellman_Key_Exchange](/img/crpto/ECDiffie_Hellman_Key_Exchange.png)
 
