--- a/_posts/2019-01-13-ECDLP.md
+++ b/_posts/2019-01-13-ECDLP.md
@@ -24,3 +24,6 @@ tags:
 ## ECDiffie_Hellman_Key_Exchange
 ![ECDiffie_Hellman_Key_Exchange](/img/crpto/ECDiffie_Hellman_Key_Exchange.png)
 
+
+## EC_El_Gamal
+![EC_El_Gamal](/img/crpto/EC_El_Gamal.png)
