--- a/_posts/2019-01-22-CCA.md
+++ b/_posts/2019-01-22-CCA.md
@@ -18,9 +18,9 @@ tags:
 # CCA
 
 
-## 
-![ ](/img/crpto/.png)
+## PubKey_CCA
+![PubKey_CCA](/img/crpto/PubKey_CCA.png)
 
-##
-![ ](/img/crpto/.png)
+## CCA_Def
+![CCA_Def](/img/crpto/CCA_Def.png)
 
