--- a/_posts/2019-01-10-DDH.md
+++ b/_posts/2019-01-10-DDH.md
@@ -17,9 +17,5 @@ tags:
 
 # Decisional Diffie-Hellman Problem
 
-## 
-![ ](/img/crpto/.png)
-
-##
-![ ](/img/crpto/.png)
-
+## DDH
+![DDH](/img/crpto/DDH.png)
