--- a/_posts/2019-01-18-RSA.md
+++ b/_posts/2019-01-18-RSA.md
@@ -18,8 +18,8 @@ tags:
 # RSA
 
 
-## 
-![ ](/img/crpto/.png)
+## RSA_Trapdoor_Permutation
+![RSA_Trapdoor_Permutation](/img/crpto/RSA_Trapdoor_Permutation.png)
 
 ##
 ![ ](/img/crpto/.png)
